a1/brendan_gordon/TEST_PROGRAMS/invalidtype/Haitong_Yang/invalid5.min
# invalid if condition
var x : int;
if("true") then x = 2;
endif
